assets/css/style.css
/* ... */
.cake-variety-img-placeholer{
    margin: auto;
    width: 100%;
    aspect-ratio: 1/1;
    border-radius: 8px;
    text-align: center;
    background-color: var(--greytext);
}

.cake-variety-name{
    text-align: left;
    padding: 5px;
    width: 100%;
}

/* Cake-Variety - Section CSS Code --end */

/* Scrollbar custom css Start  */

/* width */
/* width */
::-webkit-scrollbar {
    width: 8px;
    height: 7px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey; 
    border-radius: 7px;
  }
   
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #9e458fb7; 
    border-radius: 10px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #9e458f; 
  }

  .cakes-cards-container{
    scrollbar-width: none;
    -ms-overflow-style: none;
    /* for Chrome, Safari, and Opera */
  }
  .cakes-cards-container::-webkit-scrollbar {
    display: none;
    /* for Chrome, Safari, and Opera */
  }
  /* Scrollbar custom css end  */

@media only screen and (min-width: 1440px){
}

/* media Queries for Laptop and max-width 1280 px */

@media only screen and (max-width: 1279px){
    .location__box{
        display: none;
    }

    .search__box{
        width: 40%;
    }
    .nav__list__menu{
        width: max-content;
        margin-left: 1rem;
    }

    /* .nav__list__menu > li{
        width: max-content;
        margin: 0 10px;
    } */
}
@media only screen  and (max-width: 858px) and (min-width: 768px ) {

    .nav__list__action__btn > li:nth-child(1)::after{
        padding-left: 0;
    }

    .nav__list__action__btn > li:nth-child(1){
        margin-right: 0px;
    }
}

@media only screen  and (max-width: 801px) and (min-width: 768px ) {
    .search__btn{
        position: relative;
        bottom:18px;
    }
    .search__box{
        position: relative;
        top: 5px;
    }
}
@media only screen  and (max-width: 778px) and (min-width: 768px ) {
    .search__btn{
        position: relative;
        bottom: 16px;
    }

}

/* media Queries for Mini-Tablet max-width 767 px */

@media only screen and (max-width: 767px){
    .navbar__status, .search__box{
        display: none;
    }

    .nav__list__main__div{
        width: auto;
    }

    .navbar__menu{
        display: none;
    }

    .nav__list__action__btn > li:nth-child(1), .nav__list__action__btn > li:nth-child(3){
        display: none;
    }
    .nav__list__action__btn > li:nth-child(2), .nav__list__action__btn > li:nth-child(4){
        display:inline-block;
    }
    .nav__list__action__btn > li:nth-child(2){
        margin-right: 1.5rem;
    }

    .gift__categories__list > div > p{
        display: none;
    }

    .gift__categories__list > div{
        max-width: 50px;
        min-width: 0;
        height: 50px;
        border-radius: 50%;
    }

    .carousel-container, .gift-menu-second{
        width: 100%;
    }

    .gift-menu-group{
        flex-wrap: wrap;
    }

    .gift-menu-second{
        margin: 0;
    }
    .gift-menu-one{
        order:2;
    }
    .gift-menu-third{
        order:3;
    }

    .gift-menu-one, .gift-menu-third{
        margin-top: 1rem;
        width: 48%;
        aspect-ratio: 16 / 9;
    }
    .gift-menu-one > div , .gift-menu-third > div{
        border-radius: 5px;
        margin-bottom: 1rem;
    }

    .gift-categories-list > div{
        margin-right: 0.5rem;
        padding-left: 1.5rem;
        padding-right: 1.5rem;
    }

     .gift-menu-group{
       order:2;
    }
     .landing-tagline-group{
       order:3;
    }

    .gift-categories-group{
        margin-bottom: 1rem;
    } 

    .gift-categories-list >div{
        padding: 0;
        border-radius: 50%;
        justify-content: center;
        aspect-ratio: 1/1;
        width: 50px;
    }

    .gift-categories-list >div >p{
        display: none;
    }

    .cakes-cards-container{
        margin: auto;
        margin-top: 1rem;
        flex-wrap: wrap;
        width: fit-content;
        justify-content: center;
    }
    .cake-variety-name{
        text-align: center;
    }

    .cake-variety-card-group{
        margin: auto;
        margin-bottom: 1rem;
    }
    .cake-variety-card{
        margin-right:  1rem;
    }
    .cake-card{
        margin-bottom: 1.5rem;
    }
    .cake-variety-header{
        margin-left: 1rem;
    }
}

/* media Queries for Mobile Max-width 425px */

@media only screen and (max-width: 425px){
    .navbar__top, .search__box{
        display: none;
    }
    .nav__list__action__btn > li:nth-child(2), .nav__list__action__btn > li:nth-child(4){
        display:none;
    }
    .gift-menu-one > div , .gift-menu-third > div{
        aspect-ratio: 3/1;  
        height: auto;
    }

    .gift-categories-list >div{
        width: 100px;
        padding: 1rem;
    }
    .landing-tagline{
        margin-top: 5px;
    }
}

